# wollala-upbit

./: .gitignore  .python-version  README.md  UserSetting.py  main.py  pyproject.toml  rc_resource.py  requirements.txt  resource.qrc  user_setting.py
data/: AccountInfoPandasModel.py  OrderHistoryPandasModel.py  SummaryPandasModel.py  __init__.py  account_info_pandas_model.py  order_history_pandas_model.py  pandas_model_template.py  period_pnl_pandas_model.py  pnl_coin_pandas_model.py  summary_pandas_model.py
dialog/: APIKeyInputDialog.py  ProgramInfoDialog.py  TickerSelectionDialog.py  __init__.py  apikey_input_dialog.py  program_info_dialog.py  ticker_selection_dialog.py
util/: Thread.py  __init__.py  data_manager.py  singleton.py  thread.py  upbit_caller.py
widget/: AccountInfoTableView.py  AccountInfoWidget.py  AlignDelegate.py  CalenderWidget.py  OrderHistoryTableView.py  TransactionHistoryWidget.py  WaitingSpinner.py  __init__.py  account_info_table_view.py  account_info_widget.py  align_delegate.py  calender_widget.py  date_filter_widget.py  order_history_table_view.py  period_pnl_table_view.py  period_pnl_widget.py  pnl_coin_table_view.py  pnl_coin_widget.py  summary_table_view.py  table_view_template.py  transaction_history_widget.py  waiting_spinner.py
